argocd/resources/kyverno/policies/require-container-resources-demo-app.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-container-resources-demo-app
spec:
  background: true
  rules:
    - name: require-container-resources
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - demo-app-dev
      validate:
        failureAction: Audit
        message: "Each container must define cpu/memory requests and a memory limit."
        pattern:
          spec:
            template:
              spec:
                containers:
                  - resources:
                      requests:
                        cpu: "?*"
                        memory: "?*"
                      limits:
                        memory: "?*"
